--- a/src/App.css
+++ b/src/App.css
@@ -196,7 +196,8 @@ body {
 }
 
 .content>.texts>div{
-    /* border: 1px solid red; */
+    border-bottom: .3px solid #d2d0d0;
+    padding-bottom: 3px;
     display: flex;
     align-items: center;
     justify-content: space-between;
