--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ body {
     background-clip: content-box;
 }
 
-::-webkit-scrollbar-thumb:hover{
+::-webkit-scrollbar-thumb:hover {
     background-color: #dddef7;
     transition: 2s;
 }
@@ -195,20 +195,22 @@ body {
     border-radius: 10px;
 }
 
-.content>.texts>div{
+.content>.texts>div {
     border-bottom: .3px solid #d2d0d0;
-    padding-bottom: 3px;
+    padding-bottom: 5px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.content>.texts>div>#fromNow{
+.content>.texts>div>#fromNow {
     font-size: 12px;
 }
 
-.content>.texts>div>#text_link{
+.content>.texts>div>#text_link {
     /* border: 1px solid red; */
+    text-align: justify;
+    width: 600px;
 }
 
 
