--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
+:root{
+    --primary: #212789;
+    --secondary: #656cf5;
+}
 
 * {
     margin: 0;
@@ -9,11 +14,11 @@
 
 body {
     color: white;
-    background: #212789;
+    background: var(--primary);
     background: -webkit-linear-gradient(left, #212789, #264A84);
     background: -moz-linear-gradient(left, #212789, #264A84);
     background: linear-gradient(to right, #212789, #264A84);
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
 }
 
@@ -22,11 +27,11 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-    background-color: #212789;
+    background-color: var(--primary);
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #656cf5;
+    background-color: var(--secondary);
     border-radius: 5px;
     border: 3.5px solid transparent;
     background-clip: content-box;
@@ -109,7 +114,7 @@ body {
     border: none;
     outline: none;
     background: transparent;
-    color: #222E89;
+    color: var(--primary);
     margin-top: 2px;
 }
 
@@ -128,8 +133,9 @@ body {
     padding: 10px 12px;
     width: 250px;
     border-radius: 20px;
-    outline: blue;
+    outline: var(--primary);
     border: none;
+    font-family: 'Poppins', sans-serif;
 }
 
 .add_file_inp>form>label {
@@ -182,7 +188,7 @@ body {
 }
 
 .content>.texts {
-    /* border: 2px solid red; */
+    border: 2px solid var(--secondary);
     width: 70%;
     background-color: whitesmoke;
     color: black;
@@ -196,6 +202,7 @@ body {
 }
 
 .content>.texts>div {
+    font-family: 'Poppins', sans-serif;
     border-bottom: .3px solid #d2d0d0;
     padding-bottom: 5px;
     display: flex;
@@ -212,16 +219,33 @@ body {
 .content>.texts>div>#text_link {
     /* border: 1px solid red; */
     text-align: justify;
-    width: 600px;
+    width: 550px;
 }
 
 .content>.texts>div>#fromNow {
     /* border: 1px solid red; */
     font-size: 12px;
     width: 100px;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: 400;
 }
 
+.content>.texts>div>#fromNow>p{
+    /* border: 1px solid red; */
+    width: 80px;
+}
+
+.content>.texts>div>#fromNow>#delLogo{
+    /* border: 1px solid red; */
+    font-size: 17px;
+    color: black;
+}
+
+.content>.texts>div>#fromNow>#delLogo:hover{
+    color: red;
+}
 
 
 
