--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,9 @@ body {
     border-radius: 20px;
     border: none;
     outline: none;
+    background-color: white;
+    color: var(--primary);
+    font-family: 'Poppins', sans-serif;
 }
 
 .content {
