--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
-:root{
+:root {
     --primary: #212789;
     --secondary: #656cf5;
+    --black: rgb(0, 0, 0);
+    --white: rgb(255, 255, 255);
+    --Poppins: 'Poppins', sans-serif;
+    --Montserrat: 'Montserrat', sans-serif;
 }
 
 * {
@@ -63,7 +67,7 @@ body {
     align-items: flex-end;
     flex-wrap: wrap;
     padding: 0px 30px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--Montserrat);
 }
 
 .class_id {
@@ -201,7 +205,7 @@ body {
 }
 
 .content>.texts {
-    border: 2px solid var(--secondary);
+    border: 1px solid var(--secondary);
     width: 70%;
     background-color: whitesmoke;
     color: black;
@@ -235,6 +239,10 @@ body {
     width: 550px;
 }
 
+.content>.texts>div>#text_link>a{
+    text-align: justify;
+    /* width: 550px; */
+}
 .content>.texts>div>#fromNow {
     /* border: 1px solid red; */
     font-size: 12px;
@@ -250,13 +258,14 @@ body {
     width: 80px;
 }
 
-.content>.texts>div>#fromNow>#delLogo{
+
+.content>.texts>div>#fromNow>div>#delLogo{
     /* border: 1px solid red; */
     font-size: 17px;
     color: black;
 }
 
-.content>.texts>div>#fromNow>#delLogo:hover{
+.content>.texts>div>#fromNow #delLogo:hover{
     color: red;
 }
 
