--- a/src/App.css
+++ b/src/App.css
@@ -184,7 +184,7 @@ body {
     box-sizing: border-box;
 }
 
-.del_all_btn>button:hover{
+.del_all_btn>button:hover {
     padding: 6px 18px;
     border: 2px solid white;
     background-color: var(--primary);
@@ -205,7 +205,7 @@ body {
 }
 
 .content>.texts {
-    border: 1px solid var(--secondary);
+    border: 1px solid var(--primary);
     width: 70%;
     background-color: whitesmoke;
     color: black;
@@ -214,8 +214,9 @@ body {
     row-gap: 15px;
     /* align-items: center;
     justify-content: center; */
-    padding: 30px 20px;
+    padding: 50px 20px;
     border-radius: 10px;
+    position: relative;
 }
 
 .content>.texts>div {
@@ -239,10 +240,11 @@ body {
     width: 550px;
 }
 
-.content>.texts>div>#text_link>a{
+.content>.texts>div>#text_link>a {
     text-align: justify;
     /* width: 550px; */
 }
+
 .content>.texts>div>#fromNow {
     /* border: 1px solid red; */
     font-size: 12px;
@@ -253,19 +255,19 @@ body {
     font-weight: 400;
 }
 
-.content>.texts>div>#fromNow>p{
+.content>.texts>div>#fromNow>p {
     /* border: 1px solid red; */
     width: 80px;
 }
 
 
-.content>.texts>div>#fromNow>div>#delLogo{
+.content>.texts>div>#fromNow>div>#delLogo {
     /* border: 1px solid red; */
     font-size: 17px;
     color: black;
 }
 
-.content>.texts>div>#fromNow #delLogo:hover{
+.content>.texts>div>#fromNow #delLogo:hover {
     color: red;
 }
 
@@ -286,6 +288,16 @@ body {
 }
 
 
+#class-id-name {
+    color: #223887;
+    font-family: var(--Montserrat);
+    font-size: 14px;
+    font-weight: 600;
+    align-self: center;
+    top: 0;
+    padding: 5px 13px;
+    position: absolute;
+}
 
 
 
